--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "create-react-app": "^5.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
+    "react-credit-card": "^0.20.0",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
