--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "create-react-app": "^5.0.0",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-credit-card": "^0.20.0",
