--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.0",
     "cors": "^2.8.5",
     "create-react-app": "^5.0.0",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
+    "react-chartjs-2": "^4.0.1",
     "react-credit-card": "^0.20.0",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
